<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blockchain Merchant</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_title">Merchant Settings</string>
    <string name="action_about">About Blockchain Merchant</string>
    <string name="action_newpin">Change PIN code</string>
    <string name="action_pincode">PIN code</string>
    <string name="hello_world">Hello world!</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate us</string>
    <string name="email_chooser">Send e-mail...</string>
    <string name="about">Blockchain Merchant %1$s\n©%2$s Blockchain.info</string>
    <string name="wallet_download">Get a free Bitcoin Wallet</string>
    
    <string name="tab_settings">Settings</string>
    <string name="tab_payment">Payment</string>
    <string name="tab_transactions">Transactions</string>
    
    <string name="receive_coins_fragment_name">Name</string>
    <string name="receive_coins_fragment_receiving_address_hint">Wallet address</string>
    <string name="receive_coins_fragment_receiving_address_error">Invalid address</string>
    <string name="receive_coins_fragment_default_currency_hint">Default currency</string>
    <string name="receive_coins_fragment_email_address_hint">E-mail address</string>
    <string name="receive_coins_fragment_other_currency">Other currency code (3 letter code, ex.: MXP)</string>
    <string name="receive_coins_activity_title">Send Bitcoins</string>
    <string name="receive_coins_install_qr_scanner_msg">Please install ZXing QR-code scanner or Goggles!</string>
    <string name="receive_coins_uri_parse_error_title">Invalid Bitcoin URI</string>
    <string name="receive_coins_parse_address_error_msg">Got invalid bitcoin address!\n(Mixing up Testnet/Prodnet?)</string>
    <string name="receive_coins_fragment_push_notifications">Push notifications</string>
    <string name="receive_coins_fragment_email_receipts">E-mail receipts</string>
    <string name="use_btc">Enter price in Bitcoins (BTC)</string>
    <string name="payment_note">Description (optional)...</string>
    <string name="payment_clear">CLEAR</string>
    <string name="payment_new">Start</string>
    <string name="payment_ready">Confirm Payment</string>
    <string name="payment_executed">Payment Executed</string>
    <string name="no_data">No data</string>
    <string name="content_description">Thank you. Hope to see you soon.</string>
    <string name="delete_rec">Are you sure you want to delete this payment entry?</string>
    <string name="invalid_btc_address">Please enter a valid Bitcoin wallet address.</string>
    <string name="pin_code_prompt1">Create a 4-digit PIN code</string>
    <string name="pin_code_prompt2">Repeat PIN code</string>
    <string name="pin_code_prompt3">Enter your 4-digit PIN code</string>
    <string name="marquee_start">Payment received from</string>
    <string name="notification_end">BTC received</string>
    <string name="generating_qr">Generating QR code...</string>
    <string name="no_exchange_rate">Blockchain Merchant has not determined the exchange rate for your selected currency. Please check your Internet connection and try again.</string>
    
    <string name="pin_code_create_error">Enter two matching 4-digit PIN codes</string>
    <string name="pin_code_enter_error">PIN code incorrect</string>
    <string name="camera_unavailable">Camera unavailable</string>
    
    <string name="toggle_on">On</string>
    <string name="toggle_off">Off</string>

    <string name="prompt_yes">Yes</string>
    <string name="prompt_no">No</string>
    <string name="prompt_ok">OK</string>
    <string name="prompt_ko">CANCEL</string>
    <string name="prompt_save">SAVE</string>
    
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

<!-- <string name="bitcoin_currency_symbol">&#xf15a;</string> -->
    <string name="bitcoin_currency_symbol">&#x0243;</string>

</resources>
