<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="4dp"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="#ffffff"
    android:orientation="horizontal"
    >
    
    <TextView
        android:id="@+id/currencySymbol"
        android:layout_width="70sp"
        android:layout_height="match_parent"
        android:textSize="112sp"
        android:textStyle="bold"
        android:padding="0dp"
		android:layout_gravity="left|center_vertical"
        android:text=""
        />
    
    <EditText
        android:id="@+id/posInput"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ems="10"
        android:textSize="112sp"
        android:textStyle="bold"
        android:gravity="end"
        android:padding="0dp"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        />
    
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    >
    
    <TextView
        android:id="@+id/btc_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:textColor="#606060"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    </LinearLayout>
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/use_btc"
        android:textColor="#000000"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold"
        />
        
    <Switch
        android:id="@+id/use_btc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="false" />

    </LinearLayout>

    <EditText
        android:id="@+id/note"
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:hint="@string/payment_note"
        android:ems="10"
        />

    <ImageView
        android:id="@+id/qr"
        android:layout_gravity="center_horizontal"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:background="@drawable/grey_frame"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="4dp"
		android:contentDescription="@string/content_description"
		/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:gravity="center"
    >
    
    <Button
        android:id="@+id/clear"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/payment_clear"
		/>
    
    <Button
        android:id="@+id/new_payment"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/payment_new"
		/>
        
	</LinearLayout>

</LinearLayout>
