<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
     
    <AutoCompleteTextView
        android:id="@+id/receive_coins_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text"
        android:completionThreshold="1"
        android:hint="@string/receive_coins_fragment_name"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textScaleX="@dimen/address_scalex"
        android:textSize="@dimen/font_size_normal" />

    <AutoCompleteTextView
        android:id="@+id/receive_coins_receiving_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text"
        android:completionThreshold="1"
        android:drawableRight="@drawable/ic_input_qrcode"
        android:hint="@string/receive_coins_fragment_receiving_address_hint"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textScaleX="@dimen/address_scalex"
        android:textSize="@dimen/font_size_normal" />

    <Spinner
        android:id="@+id/receive_coins_default_currency"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/receive_coins_fragment_default_currency_hint"
        android:entries="@array/currencies"
        android:textStyle="bold"
        android:prompt="@string/receive_coins_fragment_default_currency_hint" />
<!--
	<AutoCompleteTextView
        android:id="@+id/receive_coins_email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text"
        android:completionThreshold="1"
        android:hint="@string/receive_coins_fragment_email_address_hint"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textScaleX="@dimen/address_scalex"
        android:textSize="@dimen/font_size_normal" />
-->        
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="60dp"
        android:text="@string/receive_coins_fragment_push_notifications"
        android:textColor="#000000"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold"
        />
        
    <Switch
        android:id="@+id/push_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="false" />

    </LinearLayout>
<!--
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="60dp"
        android:text="@string/receive_coins_fragment_email_receipts"
        android:textColor="#000000"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold"
        />
        
    <Switch
        android:id="@+id/email_receipts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="false" />

    </LinearLayout>
-->

</LinearLayout>
