<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="420dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    >

    	<EditText
			android:id="@+id/pin1"
		    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:layout_marginTop="10dp"
        	android:layout_gravity="center_horizontal"
        	android:layout_margin="4dp"
		    android:hint="@string/pin_code_prompt1"
            android:background="@drawable/edittext_states"
            android:ems="10"
	        android:textColor="#ff000000"
            android:lines="1"
            android:padding="7dp"
		    android:maxLength="4"
        	android:inputType="numberPassword"
		    android:imeOptions="actionDone"
			android:singleLine="true"
			/>

        <EditText
			android:id="@+id/pin2"
		    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:layout_marginTop="10dp"
        	android:layout_gravity="center_horizontal"
        	android:layout_margin="4dp"
		    android:hint="@string/pin_code_prompt2"
            android:background="@drawable/edittext_states"
            android:ems="10"
	        android:textColor="#ff000000"
            android:lines="1"
            android:padding="7dp"
		    android:maxLength="4"
        	android:inputType="numberPassword"
		    android:imeOptions="actionDone"
			android:singleLine="true"
			/>

    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="20dp"
    	android:layout_marginTop="30dp"
    	android:layout_gravity="center_horizontal"
    	android:orientation="horizontal"
    	>
    
    	<Button
            android:id="@+id/cancel"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
	        android:layout_marginBottom="20dp"
            android:background="@drawable/button_generic"
        	android:text="@string/prompt_ko"
			android:textSize="22sp"
			android:textColor="#FF000000"
    	 	android:shadowColor="#191919"
			android:shadowDx="1"
			android:shadowDy="1"
			android:shadowRadius="1"
        />

        <Button
            android:id="@+id/confirm"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
	        android:layout_marginBottom="20dp"
            android:background="@drawable/button_blue"
        	android:text="@string/prompt_ok"
			android:textSize="22sp"
			android:textColor="#FFFFFFFF"
    	 	android:shadowColor="#191919"
			android:shadowDx="1"
			android:shadowDy="1"
			android:shadowRadius="1"
        />

    </LinearLayout>
    
</LinearLayout>
