<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="420dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    >

    <ProgressBar
		android:id="@+id/progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:indeterminate="true"
		/>
    
    <Spinner
        android:id="@+id/receive_coins_other_currency"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/receive_coins_fragment_default_currency_hint"
        android:entries="@array/currencies"
        android:textStyle="bold"
        android:prompt="@string/receive_coins_fragment_default_currency_hint" />

    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="20dp"
    	android:layout_marginTop="30dp"
    	android:layout_gravity="center_horizontal"
    	android:orientation="horizontal"
    	>
    
    	<Button
            android:id="@+id/cancel"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
	        android:layout_marginBottom="20dp"
            android:background="@drawable/button_generic"
        	android:text="@string/prompt_ko"
			android:textSize="22sp"
			android:textColor="#FF000000"
    	 	android:shadowColor="#191919"
			android:shadowDx="1"
			android:shadowDy="1"
			android:shadowRadius="1"
        />

        <Button
            android:id="@+id/confirm"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
	        android:layout_marginBottom="20dp"
            android:background="@drawable/button_blue"
        	android:text="@string/prompt_save"
			android:textSize="22sp"
			android:textColor="#FFFFFFFF"
    	 	android:shadowColor="#191919"
			android:shadowDx="1"
			android:shadowDy="1"
			android:shadowRadius="1"
        />
    	
    </LinearLayout>
    
</LinearLayout>
